# free5GRAN

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Readme.md  analyse.py  output.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: scan_band.cfg  search_cell.cfg  ssb_emission.cfg
docs/: annotated.html  annotated_dup.js  classes.html  classphy-members.html  classphy.html  classphy.js  classphy__coll__graph.map  classphy__coll__graph.md5  classrf-members.html  classrf.html  classrf.js  common__utils_8cpp.html  common__utils_8cpp__incl.map  common__utils_8cpp__incl.md5  common__utils_8cpp_source.html  common__utils_8h.html  common__utils_8h.js  common__utils_8h__dep__incl.map  common__utils_8h__dep__incl.md5  common__utils_8h__incl.map  common__utils_8h__incl.md5  common__utils_8h_source.html  dir_000003_000001.html  dir_000005_000006.html  dir_000006_000000.html  dir_000006_000008.html  dir_000007_000001.html  dir_000007_000004.html  dir_000007_000011.html  dir_000010_000001.html  dir_000011_000001.html  dir_000011_000004.html  dir_1cf78a5794a90e256ecda86668ecc40d.html  dir_1cf78a5794a90e256ecda86668ecc40d_dep.map  dir_1cf78a5794a90e256ecda86668ecc40d_dep.md5  dir_4ce02b87227cef1244bdd1fa3b12a08b.html  dir_5475affc5e37056bf985025093bce964.html  dir_5475affc5e37056bf985025093bce964_dep.map  dir_5475affc5e37056bf985025093bce964_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+130 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  (+11 more)
gnodeb/: main.cpp
gnodeb/phy/: phy.cpp  phy.h
gnodeb/rf/: rf.cpp  rf.h
lib/asn1c/nr_rrc/: AI-RNTI-r16.c  AI-RNTI-r16.h  AMF-Identifier.c  AMF-Identifier.h  ARFCN-ValueEUTRA.c  ARFCN-ValueEUTRA.h  ARFCN-ValueNR.c  ARFCN-ValueNR.h  ARFCN-ValueUTRA-FDD-r16.c  ARFCN-ValueUTRA-FDD-r16.h  AS-Config.c  AS-Config.h  AS-Context.c  AS-Context.h  AbsoluteTimeInfo-r16.c  AbsoluteTimeInfo-r16.h  AccessStratumRelease.c  AccessStratumRelease.h  AdditionalSpectrumEmission.c  AdditionalSpectrumEmission.h  AffectedCarrierFreq-r16.c  AffectedCarrierFreq-r16.h  AffectedCarrierFreqComb-r16.c  AffectedCarrierFreqComb-r16.h  AffectedCarrierFreqCombEUTRA.c  AffectedCarrierFreqCombEUTRA.h  AffectedCarrierFreqCombInfoMRDC.c  AffectedCarrierFreqCombInfoMRDC.h  AffectedCarrierFreqCombList-r16.c  AffectedCarrierFreqCombList-r16.h  AffectedCarrierFreqCombNR.c  AffectedCarrierFreqCombNR.h  AffectedCarrierFreqList-r16.c  AffectedCarrierFreqList-r16.h  AggregatedBandwidth.c  AggregatedBandwidth.h  Alpha.c  Alpha.h  AreaConfig-r16.c  AreaConfig-r16.h  (+2727 more)
lib/phy/bwp/: bwp.cpp  bwp.h
lib/phy/libphy/: libphy.cpp  libphy.h
lib/phy/physical_channel/: physical_channel.cpp  physical_channel.h
lib/phy/synchronization/: synchronization.cpp  synchronization.h
lib/phy/transport_channel/: transport_channel.cpp  transport_channel.h
lib/rf/: rf.cpp  rf.h
lib/rf/usrp_b200/: usrp_b200.cpp  usrp_b200.h
lib/rf/usrp_usrp2/: usrp_usrp2.cpp  usrp_usrp2.h
lib/rf/usrp_x300/: usrp_x300.cpp  usrp_x300.h
lib/utils/common_utils/: common_utils.cpp  common_utils.h
lib/utils/sequence_generator/: sequence_generator.cpp  sequence_generator.h
lib/variables/common_matrices/: common_matrices.h
lib/variables/common_structures/: common_structures.cpp  common_structures.h
lib/variables/common_variables/: common_variables.cpp  common_variables.h
lib/variables/ldpc_matrices/: ldpc_matrices.cpp  ldpc_matrices.h
src/: main.cc
src/phy/: phy.cpp  phy.h
src/rf/: rf.cpp  rf.h
ue/: main.cc
ue/phy/: phy.cpp  phy.h
ue/rf/: rf.cpp  rf.h
